--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+<meta name="google-site-verification" content="vTabhbLkPVLzOGt5P4tWSOJ-e_RSvzmnTKyVJ2CbODw" />
     <title>Itrendszz</title>
   </head>
   <body>
